# TransportationApp

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  qrc.qrc
docs/: CMakeLists.txt
docs/config/: Doxyfile
qml/: CMakeLists.txt
qml/Buttons/: Button.qml  ButtonSizes.qml  CMakeLists.txt  IconButton.qml  PrimaryButton.qml  RadioButtonComp.qml  SecondaryButton.qml
qml/Calendar/: AdditionalButton.qml  AdditionalCalendar.qml  CMakeLists.txt  Calendar.qml  DatePicker.qml  DateRangePicker.qml  DatesUtils.js
qml/Colors/: CMakeLists.txt  Colors.qml  CustomColors.qml  Themes.qml
qml/InputFields/: CMakeLists.txt  ComboBoxControl.qml  ComboBoxInputField.qml  DateInputField.qml  DateRangeInputField.qml  NumberInputField.qml  SwitchInputField.qml  TextInputField.qml
qml/Map/: CMakeLists.txt  MapComponent.qml  RouteInfoPannel.qml  WaypointInfo.qml
qml/Notifications/: CMakeLists.txt  Notification.qml  NotificationManager.qml  NotificationTypes.qml
qml/Pages/: AuthPage.qml  CMakeLists.txt  CarPage.qml  DeliveriesPage.qml  DriverPage.qml  LoginPage.qml  MainPage.qml  OrderPage.qml  PlanningPage.qml  SignUpPage.qml
qml/Popups/: AboutPopup.qml  CMakeLists.txt  Settings.qml
qml/TabControls/: CMakeLists.txt  LeftMenuTabButton.qml  LeftMenuTabPannel.qml  TabButtonBase.qml  TabPannel.qml
qml/Tables/: AdditionalPannel.qml  CMakeLists.txt  CarsTable.qml  DeliveriesTable.qml  DriversTable.qml  OrdersTable.qml  Pagination.qml  TableBase.qml  TableCell.qml  TableHeaderCell.qml  TableHeaders.qml  TableRow.qml
qml/Tabs/: CMakeLists.txt  CarInfoTab.qml  CarTableTab.qml  DeliveryTableTab.qml  DriverInfoTab.qml  DriverTableTab.qml  OrderInfoPage.qml  OrderInfoTab.qml  OrderTableTab.qml  PlanningMapTab.qml  PlanningTab.qml
qml/Utils/: CMakeLists.txt  DateUtils.js
src/: CMakeLists.txt
src/ComponentsClasses/: CMakeLists.txt  car.cpp  car.h  delivery.cpp  delivery.h  deliveryorderlist.cpp  deliveryorderlist.h  driver.cpp  driver.h  order.cpp  order.h  settings.cpp  settings.h  translationhandler.cpp  translationhandler.h  user.cpp  user.h
src/Database/: CMakeLists.txt  database.cpp  database.h
src/Database/tests/: CMakeLists.txt  tst_databasetest.cpp
src/FilterModels/: CMakeLists.txt  carsfiltermodel.cpp  carsfiltermodel.h  deliveriesfiltermodel.cpp  deliveriesfiltermodel.h  driversfiltermodel.cpp  driversfiltermodel.h  ordersfiltermodel.cpp  ordersfiltermodel.h
src/Models/: CMakeLists.txt  abstractsqlquerymodel.cpp  abstractsqlquerymodel.h  carsmodel.cpp  carsmodel.h  deliveriesmodel.cpp  deliveriesmodel.h  drivermodel.cpp  drivermodel.h  drivingcategoriesmodel.cpp  drivingcategoriesmodel.h  ordersmodel.cpp  ordersmodel.h  orderstatusmodel.cpp  orderstatusmodel.h  rolesmodel.cpp  rolesmodel.h  usermodel.cpp  usermodel.h
src/UserModels/: CMakeLists.txt  rolesmodel.cpp  rolesmodel.h  user.h  usermodel.cpp  usermodel.h
tests/: CMakeLists.txt
tests/DatabaseTests/: CMakeLists.txt  tst_databasetest.cpp
tests/ModelsTests/: CMakeLists.txt  tst_modelstest.cpp
tests/UserModelsTests/: CMakeLists.txt  tst_usermodelstest.cpp  tst_usertest.cpp  tst_usertest.qml
translations/: CMakeLists.txt  TransportationApp_en.ts  TransportationApp_ru.ts
