add_subdirectory(Buttons)
add_subdirectory(Colors)
add_subdirectory(InputFields)
add_subdirectory(TabControls)
add_subdirectory(Tables)
add_subdirectory(Calendar)
add_subdirectory(Notifications)
add_subdirectory(Tabs)
add_subdirectory(Pages)
add_subdirectory(Utils)

#list(APPEND QML_IMPORT_PATH "${CMAKE_CURRENT_LIST_DIR}/Buttons")

